samples/_failures_safe/1761696288_703087_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2206c2b.c: In function ‘print_shortest_path’:
./samples/SAFE/__tmp_c2206c2b.c:151:21: error: expected ‘)’ at end of input
  151 |         if (path_len
      |            ~        ^
      |                     )
./samples/SAFE/__tmp_c2206c2b.c:151:9: error: expected declaration or statement at end of input
  151 |         if (path_len
      |         ^~
./samples/SAFE/__tmp_c2206c2b.c:151:9: error: expected declaration or statement at end of input
